[gd_scene load_steps=31 format=2]

[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=1]
[ext_resource path="res://src/dreamscape/CardLibrary/CardLibrary.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/dreamscape/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://fonts/Amarante-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/dreamscape/MainMenu/NewGame.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/main_menu/hypnagonia-white.png" type="Texture" id=6]
[ext_resource path="res://src/dreamscape/MainMenu/SettingsContainer.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/main_menu/card_library_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/backgrounds/dark/6dd4ba414af241de43bb89a489fb_hires.jpeg" type="Texture" id=9]
[ext_resource path="res://shaders/mists.shader" type="Shader" id=10]
[ext_resource path="res://assets/main_menu/new_game_button.png" type="Texture" id=11]
[ext_resource path="res://assets/main_menu/new_game_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/icons/GUI/cog.png" type="Texture" id=13]
[ext_resource path="res://assets/icons/GUI/info.png" type="Texture" id=14]
[ext_resource path="res://assets/main_menu/exit_button_pressed.png" type="Texture" id=15]
[ext_resource path="res://assets/main_menu/exit_button.png" type="Texture" id=16]
[ext_resource path="res://assets/main_menu/quickstart_button.png" type="Texture" id=17]
[ext_resource path="res://assets/main_menu/quickstart_button_pressed.png" type="Texture" id=18]
[ext_resource path="res://assets/main_menu/card_library_button.png" type="Texture" id=19]
[ext_resource path="res://assets/main_menu/continue_button.png" type="Texture" id=20]
[ext_resource path="res://assets/main_menu/continue_button_pressed.png" type="Texture" id=21]
[ext_resource path="res://src/dreamscape/MainMenu/CreditLabel.gd" type="Script" id=22]
[ext_resource path="res://assets/icons/GUI/price-tag.png" type="Texture" id=23]
[ext_resource path="res://src/dreamscape/GUI/ghost_rtl_effect.gd" type="Script" id=24]
[ext_resource path="res://themes/darktheme/StyleBox/Opaque.tres" type="StyleBox" id=25]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="RichTextEffect" id=6]
script = ExtResource( 24 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="Menu" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 7
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shader" type="ColorRect" parent="."]
self_modulate = Color( 0.498039, 0.294118, 0.933333, 0.509804 )
material = SubResource( 5 )
margin_right = 1455.0
margin_bottom = 900.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CardLibrary" parent="." instance=ExtResource( 2 )]
margin_left = -1455.0
margin_right = -1455.0
custom_styles/panel = SubResource( 1 )
replacements = {
}
property_width_exceptions = {
"Cost": 30
}

[node name="NewGame" parent="." instance=ExtResource( 5 )]
margin_left = 1455.0
margin_right = 1455.0

[node name="Settings" parent="." instance=ExtResource( 7 )]
margin_left = 1455.0
margin_right = 1455.0

[node name="ReadMe" type="PopupPanel" parent="."]
margin_right = 4.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="ReadMe"]
margin_left = 2.0
margin_top = 2.0
margin_right = 102.0
margin_bottom = 102.0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="PopupPanel" parent="."]
margin_right = 4.0
margin_bottom = 4.0
custom_styles/panel = ExtResource( 25 )

[node name="CreditsLabel" type="RichTextLabel" parent="Credits"]
margin_left = 2.0
margin_top = 2.0
margin_right = 502.0
margin_bottom = 502.0
rect_min_size = Vector2( 500, 500 )
bbcode_enabled = true
custom_effects = [ SubResource( 6 ) ]
script = ExtResource( 22 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CornerElements" type="HBoxContainer" parent="MainMenu"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1425.0
margin_bottom = 870.0

[node name="LeftSide" type="VBoxContainer" parent="MainMenu/CornerElements"]
margin_right = 75.0
margin_bottom = 840.0
custom_constants/separation = 30

[node name="Readme" type="TextureButton" parent="MainMenu/CornerElements/LeftSide"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="Credits" type="TextureButton" parent="MainMenu/CornerElements/LeftSide"]
margin_top = 105.0
margin_right = 75.0
margin_bottom = 180.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 23 )
expand = true
stretch_mode = 5

[node name="Push" type="Control" parent="MainMenu/CornerElements/LeftSide"]
margin_top = 210.0
margin_right = 75.0
margin_bottom = 730.0
size_flags_vertical = 3

[node name="Exit" type="TextureButton" parent="MainMenu/CornerElements/LeftSide"]
margin_top = 760.0
margin_right = 75.0
margin_bottom = 840.0
rect_min_size = Vector2( 0, 80 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Push" type="Control" parent="MainMenu/CornerElements"]
margin_left = 78.0
margin_right = 1317.0
margin_bottom = 840.0
size_flags_horizontal = 3

[node name="RightSide" type="VBoxContainer" parent="MainMenu/CornerElements"]
margin_left = 1320.0
margin_right = 1395.0
margin_bottom = 840.0

[node name="Settings" type="TextureButton" parent="MainMenu/CornerElements/RightSide"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Push" type="Control" parent="MainMenu/CornerElements/RightSide"]
margin_top = 78.0
margin_right = 75.0
margin_bottom = 816.0
size_flags_vertical = 3

[node name="Version" type="Label" parent="MainMenu/CornerElements/RightSide"]
margin_top = 819.0
margin_right = 75.0
margin_bottom = 840.0
text = "v0.14.0"
align = 2

[node name="VBox" type="VBoxContainer" parent="MainMenu"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1425.0
margin_bottom = 870.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="MainMenu/VBox"]
margin_right = 1395.0
margin_bottom = 307.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_top = 90

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBox/Margin"]
margin_top = 90.0
margin_right = 1395.0
margin_bottom = 307.0
mouse_filter = 2

[node name="Title" type="TextureRect" parent="MainMenu/VBox/Margin/VBoxContainer"]
margin_right = 1395.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Subtitle" type="Label" parent="MainMenu/VBox/Margin/VBoxContainer"]
margin_top = 153.0
margin_right = 1395.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 3 )
text = "Therapy through Nightmares"
align = 1

[node name="Center" type="CenterContainer" parent="MainMenu/VBox"]
margin_top = 310.0
margin_right = 1395.0
margin_bottom = 840.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VButtons" type="VBoxContainer" parent="MainMenu/VBox/Center"]
margin_left = 547.0
margin_top = 70.0
margin_right = 847.0
margin_bottom = 460.0
rect_min_size = Vector2( 192, 0 )
custom_constants/separation = 30

[node name="Continue" type="TextureButton" parent="MainMenu/VBox/Center/VButtons"]
visible = false
margin_right = 300.0
margin_bottom = 130.0
rect_min_size = Vector2( 300, 130 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
expand = true
stretch_mode = 5

[node name="NewGame" type="TextureButton" parent="MainMenu/VBox/Center/VButtons"]
margin_right = 300.0
margin_bottom = 130.0
rect_min_size = Vector2( 300, 130 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="QuickStart" type="TextureButton" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 220, 100 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="CardLibrary" type="TextureButton" parent="MainMenu/VBox/Center/VButtons"]
margin_top = 290.0
margin_right = 300.0
margin_bottom = 390.0
rect_min_size = Vector2( 220, 100 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="MenuTween" type="Tween" parent="."]

[node name="FadeToBlack" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BGTween" type="Tween" parent="."]
